<resources>
    <string name="authority">ru.argerd.repo</string>

    <string name="app_name">Хочу помочь</string>

    <string name="splash_activity_text">Загрузка…</string>

    <string name="toolbar_edit_menu">Редактировать</string>
    <string name="date_of_birthday_hint">Дата рождения</string>
    <string name="field_of_service_hint">Сфера деятельности</string>
    <string name="receive_push_notification_text">Получать push-уведомления</string>
    <string name="your_friends_hint">Ваши друзья</string>
    <string name="logout">Выйти из аккаунта</string>

    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="help">Помочь</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>

    <string name="choose_photo">Выбрать фото</string>
    <string name="create_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>

    <string name="choose_category_of_help">Выберите категорию помощи</string>
    <string name="not_founded_needed_application">Нобходимое для этого приложение не
        найдено</string>
    <string name="file_name_for_profile">profile.jpg</string>
    <string name="error_delete_file">Ошибка при удалении файла</string>

    <string name="search_view_hint">Введите название организации</string>

    <string name="by_events">По мероприятиям</string>
    <string name="by_nko">По НКО</string>
    <string name="search_results">Результаты поиска:</string>
    <string name="keywords">Ключевые слова:</string>

    <string name="error_write_to_file">Ошибка при записи в файл</string>

    <string name="filter">Фильтр</string>
    <string name="categories_of_help">Категории помощи:</string>
    <string name="money_help">Деньгами</string>
    <string name="things_help">Вещами</string>
    <string name="prof_help">Проф. помощью</string>
    <string name="volunteering_help">Волонтерством</string>

    <string name="you_have_questions">У вас есть вопросы?</string>
    <string name="write_me"><u>Напишите нам</u></string>
    <string name="move_to_site"><u>Перейти на сайт организации</u></string>
    <string name="helping_things">Помочь\nвещами</string>
    <string name="become_volunteer">Стать\nволонтером</string>
    <string name="prof_help2">Проф.\nпомощь</string>
    <string name="money_help2">Помочь\nденьгами</string>

    <string-array name="left_variable">
        <item>Остался</item>
        <item>Осталось</item>
    </string-array>

    <string-array name="left_days_variable">
        <item>день</item>
        <item>дня</item>
        <item>дней</item>
    </string-array>

    <string name="load_successful">Загрузка завершена</string>

    <string name="authorization">Авторизация</string>
    <string name="authorizationTitle">Для участия в мероприятиях войдите в приложение
        через социальные сети</string>
    <string name="authorizationSecondTitle">Или авторизуйтесь через приложение</string>
    <string name="email_hint">E-mail</string>
    <string name="email_hint_text">Введите e-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="password_hint_text">Введите пароль</string>
    <string name="login">войти</string>
    <string name="forgot_password"><u>Забыли пароль</u></string>
    <string name="registration"><u>Регистрация</u></string>

    <string name="search_pager_hint">Напишите в строке поиска название
        мероприятия или ключевые слова.</string>
    <string name="for_example">Например,</string>
    <string name="link_pager_hint"><u> мастер-класс, помощь</u></string>

    <string name="error_network">Ошибка сети</string>
    <string name="database_error">Ошибка базы данных</string>
</resources>
