<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/news_item"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news" />

    <item
        android:id="@+id/search_item"
        android:enabled="true"
        android:icon="@drawable/ic_searh"
        android:title="@string/search" />

    <item
        android:id="@+id/help_item"
        android:background="@null"
        android:enabled="true"
        android:title="@string/help" />
    <item
        android:id="@+id/history_item"
        android:enabled="true"
        android:icon="@drawable/ic_history_40dp"
        android:title="@string/history" />

    <item
        android:id="@+id/profile_item"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>